# sanders

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  justfile  readme.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
crates/pit8253/: Cargo.toml  readme.md
crates/pit8253/src/: lib.rs
crates/privilege_level/: Cargo.toml  readme.md
crates/privilege_level/src/: lib.rs
docs/: architectures.md  index.md
drivers/serial/: Cargo.toml
drivers/vga_buffer/: Cargo.toml
drivers/vga_buffer/src/: lib.rs
kernel/arch/: Cargo.toml
kernel/arch/src/: lib.rs
kernel/arch_x86/: Cargo.toml
kernel/arch_x86/src/: lib.rs
kernel/arch_x86/src/system/: cpu.rs  memory.rs  mod.rs
kernel/frame_allocator/: Cargo.toml
kernel/frame_allocator/src/: lib.rs
kernel/heap/: Cargo.toml
kernel/heap/src/: lib.rs
kernel/ipc/: Cargo.toml
kernel/ipc/src/: error.rs  lib.rs
kernel/logging/: Cargo.toml
kernel/logging/src/: error.rs  lib.rs
kernel/memory/: Cargo.toml
kernel/memory/src/: error.rs  lib.rs
kernel/memory_constants/: Cargo.toml
kernel/memory_constants/src/: lib.rs
kernel/multitasking/: Cargo.toml
kernel/multitasking/src/: lib.rs
kernel/page_allocator/: Cargo.toml
kernel/page_allocator/src/: lib.rs
kernel/per_cpu/: Cargo.toml
kernel/per_cpu/src/: lib.rs
kernel/sanders/: Cargo.toml
kernel/sanders/src/: error.rs  lib.rs  main.rs
kernel/system/: Cargo.toml
kernel/system/src/: lib.rs  memory.rs
src/: gdt.rs  lib.rs  logging.rs  main.rs  testing.rs
src/arch/: mod.rs
src/arch/x86_64/: apic.rs  mod.rs  pic.rs
src/arch/x86_64/memory/: frame_manager.rs  mod.rs
src/arch/x86_64/system/: cpu.rs  memory.rs  mod.rs
src/interrupts/: idt.rs  mod.rs  pic.rs
src/ipc/: mod.rs
src/memory/: gdt.rs  mod.rs
src/memory/allocation/: bump.rs  fixed_size.rs  mod.rs
src/memory/allocator/: bump.rs  fixed_size.rs  locked.rs  mod.rs
src/multitasking/: mod.rs  process.rs  scheduler.rs  thread.rs
src/process/: mod.rs
src/system/: cpu.rs  memory.rs  mod.rs
tests/: heap_allocation.rs  stack_overflow.rs
utility_crates/serial/: Cargo.toml
utility_crates/serial/src/: lib.rs
utility_crates/testing/: Cargo.toml
utility_crates/testing/src/: lib.rs
utility_crates/vga_buffer/: Cargo.toml
utility_crates/vga_buffer/src/: lib.rs
