[package]
name = "sanders"
version = "0.1.0"
description = "A microkernel with an emphasis on simplicity and speed"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2021"
keywords = ["sanders", "s&ers", "os", "kernel", "system"]
categories = ["embedded", "no-std", "os"]

[workspace]
members = [".", "utility_crates/*"]
default-members = [".", "utility_crates/*"]

[features]
default = ["physical_page_tables", "linked_list_allocation"]

physical_page_tables = ["bootloader/map_physical_memory"]
recursive_page_tables = ["bootloader/recursive_page_table"]

linked_list_allocation = ["linked_list_allocator"]
bump_allocation = []
fixed_sized_allocation = ["linked_list_allocator"]

[dependencies]
# sanders dependencies
sanders_vga_buffer = { path = "utility_crates/vga_buffer", version = "0.1.0" }
sanders_serial = { path = "utility_crates/serial", version = "0.1.0" }
sanders_testing = { path = "utility_crates/testing", version = "0.1.0" }

# utility dependencies
bootloader = "0.9.19" # anything higher than this version causes an error with bootimage

# code utility dependencies
cfg-if = "1.0.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

# system utility dependencies
linked_list_allocator = { version = "0.9.0", optional = true }
pc-keyboard = "0.5.1"
spin = "0.9.2"
volatile = "0.2.7"

# system interfacing dependencies
pic8259 = "0.10.2" # TODO: also add support for apic
x86_64 = "0.14.5"
uart_16550 = "0.2.15"

[lib]
test = true
bench = true

[[bin]]
name = "sanders"
test = false
bench = false

[[test]]
name = "stack_overflow"
harness = false

[profile.dev]
# This can be uncommended when this issue is resolved: https://github.com/rust-lang/cargo/issues/7359
panic = "abort" # disable stack unwinding on panic
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = "off"
incremental = true

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true

[profile.bench]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
incremental = true

[profile.release]
# This can be uncommended when this issue is resolved: https://github.com/rust-lang/cargo/issues/7359
panic = "abort" # disable stack unwinding on panic
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300
