[workspace]

## Here, we specify that all subdirectories should be built,
## except for those starting with a "." So, we build all crates except hidden directories.
members = [
    "crates/[!.]*/",
    "drivers/[!.]*/",
    "kernel/[!.]*/",
]

default-members = [
    "kernel/[!.]*/",
]

exclude = [
    "build",
]

[profile.dev]
# This can be uncommended when this issue is resolved: https://github.com/rust-lang/cargo/issues/7359
panic = "abort" # disable stack unwinding on panic
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = "off"
incremental = true

[profile.test]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = true

[profile.bench]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
incremental = true

[profile.release]
# This can be uncommended when this issue is resolved: https://github.com/rust-lang/cargo/issues/7359
panic = "abort" # disable stack unwinding on panic
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
