[package]
name = "pit8253"
version = "0.1.0"
description = "Access the PIT on x86 systems"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2018"
keywords = ["pit", "8253", "pit_8253", "programmable_interval_timer", "timer"]
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/pit8253"
homepage = "https://github.com/BSFishy/sanders/tree/develop/crates/pit8253"
repository = "https://github.com/BSFishy/sanders/"
readme = "readme.md"
license = "MIT"

[lib]
# Disable testing until we can use this: https://internals.rust-lang.org/t/proposal-move-some-cargo-config-settings-to-cargo-toml/13336/14
test = false

[dependencies]
spin = "0.9.2"
x86_64 = "0.14.5"
