[package]
name = "privilege_level"
version = "0.1.1"
description = "Quick and simple access to the current privilege level of the CPU"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2018"
keywords = ["privilege_level", "ring_level", "ring_layer", "cpu_privilege", "cpu_permission"]
categories = ["embedded", "hardware-support", "no-std"]
documentation = "https://docs.rs/privilege_level"
homepage = "https://github.com/BSFishy/sanders/tree/develop/crates/privilege_level"
repository = "https://github.com/BSFishy/sanders/"
readme = "readme.md"
license = "MIT"

[dependencies]
bit_field = "0.10.1"
cfg-if = "1.0.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.5"
