[package]
name = "sanders_vga_buffer"
version = "0.1.0"
description = "Access to the VGA buffer, used in testing in s&ers"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2021"
keywords = ["sanders", "s&ers", "vga", "vga buffer"]
categories = ["development-tools::debugging", "gui", "hardware-support", "no-std"]

[lib]
test = false
doctest = false
bench = false

[dependencies]
sanders_serial = { path = "../serial", version = "0.1.0" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
cfg-if = "1.0.0"
spin = "0.9.2"
volatile = "0.2.7"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.14.5"
