[package]
name = "sanders"
version = "0.1.0"
description = "A microkernel with an emphasis on simplicity and speed"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2021"
keywords = ["sanders", "s&ers", "os", "kernel", "system"]
categories = ["embedded", "no-std", "os"]
build = "../../build.rs"

[features]
#default = ["physical_page_tables", "linked_list_allocation"]

# Memory segmentation features
#segmentation = []
#page_tables = []
#physical_page_tables = ["page_tables", "bootloader/map_physical_memory"]
# TODO: eventually support recursive page tables
#recursive_page_tables = ["page_tables", "bootloader/recursive_page_table"]

# Allocation method features
#linked_list_allocation = ["linked_list_allocator"]
#bump_allocation = []
#fixed_sized_allocation = ["linked_list_allocator"]

[dependencies]
arch = { path = "../arch" }
ipc = { path = "../ipc" }
logging = { path = "../logging" }
memory = { path = "../memory" }
multitasking = { path = "../multitasking" }
system = { path = "../system" }

# utility dependencies
bootloader = "0.9.19" # anything higher than this version causes an error with bootimage
log = "0.4.14"

# code utility dependencies
#bit_field = "0.10.1"
#bitflags = "1.3.2"
#cfg-if = "1.0.0"
#lazy_static = { version = "1.4.0", features = ["spin_no_std"] }

# system utility dependencies
#linked_list_allocator = { version = "0.9.0", optional = true }
#pc-keyboard = "0.5.1"
#spin = "0.9.2"
#volatile = "0.2.7"

# system interfacing dependencies
#uart_16550 = "0.2.15"

#[target.'cfg(any(target_arch = "x86_64", target_arch = "x86"))'.dependencies]
#pic8259 = "0.10.2" # TODO: also add support for apic
#x86 = "0.43.0"
#x86_64 = "0.14.6"

[lib]
test = true
bench = true

[[bin]]
name = "sanders"
test = false
bench = false

#[[test]]
#name = "stack_overflow"
#harness = false

[package.metadata.bootimage]
run-args = [
    "-s",
    "-S",
]

test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300
