[package]
name = "sanders_testing"
version = "0.1.0"
description = "Common testing utilities used by s&ers"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2021"
keywords = ["sanders", "s&ers", "test", "testing"]
categories = ["development-tools::testing", "hardware-support", "no-std"]

[lib]
bench = false

[dependencies]
sanders_serial = { path = "../serial", version = "0.1.0" }
bootloader = "0.9.19"
x86_64 = "0.14.5"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300
