[package]
name = "sanders_vga_buffer"
version = "0.1.0"
description = "Access to the VGA buffer, used in testing in s&ers"
authors = ["Matt Provost <mattprovost6@gmail.com>"]
edition = "2021"
keywords = ["sanders", "s&ers", "vga", "vga buffer"]
categories = ["development-tools::debugging", "gui", "hardware-support", "no-std"]

[lib]
bench = false

[dependencies]
sanders_serial = { path = "../serial", version = "0.1.0" }
sanders_testing = { path = "../testing", version = "0.1.0" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bootloader = "0.9.19"
spin = "0.9.2"
volatile = "0.2.7"
x86_64 = "0.14.5"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33
test-timeout = 300
